gcc/testsuite/g++.dg/cpp0x/inh-ctor16.C
@@ -1,0 +1,15 @@
+// PR c++/56285
+// { dg-options -std=c++11 }
+
+struct foo {
+    explicit foo(int&&) {}
+};
+
+struct bar: private foo {
+    using foo::foo;
+};
+
+int main()
+{
+    bar b { 42 };
+}
